# auditskill

./: .gitignore  AUDIT_FINDINGS.md  AUDIT_REPORT.md  DEPLOY.md  Dockerfile  README.md  SKILL.md  debug_verify.py  pyproject.toml
.github/workflows/: test.yml
auditskill/: __init__.py
auditskill/api/: __init__.py  main.py  models.py  rate_limiter.py  routes.py
auditskill/core/: __init__.py  auditor.py  certifier.py  crypto.py  demo.py  discover.py  endpoint_tester.py  metadata_checker.py  parser.py  pricing.py  scope_analyzer.py  security_scanner.py  ssrf_guard.py
auditskill/db/: __init__.py  store.py
auditskill/rules/: __init__.py  quality_benchmarks.py  security_rules.py  suspicious_patterns.py
scripts/: generate_keys.py
tests/: test_auditskill.py  test_smoke_rules.py
tests/fixtures/: benign_payment_skill.md  benign_security_skill.md  broken_skill.md  evil_skill.md  good_plain_skill.md  good_skill.md  payment_trap_skill.md  supply_chain_skill.md
